--- a/package.json
+++ b/package.json
@@ -149,7 +149,15 @@
   },
   "resolutions": {
     "terser-webpack-plugin": "^1.4.5",
-    "selfsigned": "^1.10.8"
+    "selfsigned": "^1.10.8",
+    "immer": "^9.0.6",
+    "prismjs": "^1.25.0",
+    "trim": "^0.0.3",
+    "glob-parent": "^5.1.2",
+    "ansi-regex": "^5.0.1",
+    "nth-check": "^2.0.1",
+    "browserslist": "^4.16.5",
+    "json-schema": "^0.4.0"
   },
   "madge": {
     "fileExtensions": [
